--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
-    "start": "next start",
+    "start": "next start -p 30000",
     "lint": "eslint",
     "format": "prettier --write .",
     "format:ci": "prettier --check .",
