--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "cookies-next": "^4.3.0",
     "lucide-react": "^0.543.0",
     "next": "15.5.2",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
